fix: add column gap for android mobile viewport (#1860)

--- a/styles/get_involved.module.css
+++ b/styles/get_involved.module.css
@@ -4,6 +4,7 @@
   max-width: var(--typicalMaxWidth);
   justify-content: space-evenly;
   flex-wrap: wrap;
+  column-gap: 0.5rem;
 }
 
 :global(#__next) .GetInvolved .ctaContainer > * {
